--- a/home/assets/main.css
+++ b/home/assets/main.css
@@ -1,7 +1,16 @@
 .page-enter-active, .page-leage-active {
-  transition: opacity 2s;
+    transition: opacity 2s;
 }
 
 .page-enter, .page-leave-to {
-  opacity: 0;
+    opacity: 0;
+}
+
+.nav-container {
+    position: relative;
+}
+
+.navbar {
+    background-color: rgba(112, 112, 112, 0.11);
+    height: 4rem;
 }
